Update "Bio" section
Make it the same as Bio in LinkedIn.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang="en-US">
 
 <head>
@@ -251,20 +250,15 @@
         <h1>BIO</h1>
 
         <article>
-          <p>My main specialisation is <strong>back-end</strong> web application development in
-          <a href="http://rubyonrails.org/">Ruby on Rails</a>. Also experienced with serverless
-          approach utilising AWS Lambda functions (ES6 Javacsript; node.js) and front-end
-          Javascript programming in Vue.js/React.js.</p>
+          <p>Full-stack Software Engineer with almost 20 years of work experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having 13 years of commercial experience building both small and large-scale web applications in Rails.</p>
 
-          <p>I've been a Ruby/Rails developer for over <strong>thirteen years</strong> now,
-          working remotely for most of my career.</p>
+          <p>Big fan of serverless architectures utilising <strong>AWS Lambda</strong> (node.js; ES6). Experienced with <strong>Vue.js</strong> and <strong>React.js</strong>.</p>
 
-          <p>I'm a big advocate of <strong>TDD</strong> and <strong>Agile</strong> practices
-          in software development.</p>
+          <p>A big advocate of Agile practices in software engineering. Loves getting things done, hates mediocrity. Problem solver fit for most challenging projects in diverse and changing environments both startup and enterprise like.</p>
 
-          <p>In the past I worked as a <strong>Senior Ruby Developer</strong>,
-          <strong>Team/Technical Lead</strong> and <strong>Software Engineering Manager</strong>,
-          managing both remote and on-site teams.</p>
+          <p>In the past taking roles of <strong>Senior Ruby Developer</strong>, <strong>Team/Technical Lead</strong> and <strong>Software Engineering Manager</strong>, having experience with managing both remote and on-site teams.</p>
+
+          <p>Occasionally a speaker at a <a href="http://trug.pl/">local Ruby community</a> meetings in Tri-City, Poland.</p>
         </article>
       </section>
 
