--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <img class="avatar" src="images/avatar.jpg?version=2" alt="Paweł Gościcki">
   </header>
 
-  <div class="content">
+  <main role="main" class="content">
 
     <div class="column-left">
 
@@ -376,7 +376,7 @@
 
     </div>
 
-  </div>
+  </main>
 
   <div class="stripe stripe-bottom">
   </div>
