Don't use <header> tag
It's not really a header.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="stripe">
   </div>
 
-  <header>
+  <div class="intro">
     <h1>PAWEŁ GOŚCICKI</h1>
     <h2>Software Engineering Manager / Senior Ruby Architect</h2>
 
@@ -49,7 +49,7 @@
     </section>
 
     <img class="avatar" src="images/avatar.jpg?version=2" alt="Paweł Gościcki">
-  </header>
+  </div>
 
   <main role="main" class="content">
 
