Emphasize Ruby related experience more
Downplaying SEM role a tiny bit.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="intro">
     <h1>PAWEŁ GOŚCICKI</h1>
-    <h2>Software Engineering Manager / Senior Ruby Architect</h2>
+    <h2>Senior Ruby Architect / Software Engineering Manager</h2>
 
     <section class="contact">
       <div class="column-left">
@@ -61,7 +61,7 @@
         <article>
           <ul class="education-experience">
             <li>
-              <h2>Software Engineering Manager / Chief Ruby Architect</h2>
+              <h2>Chief Ruby Architect / Software Engineering Manager</h2>
               <h3>Hello Bar</h3>
 
               <div class="period-place">
