--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       <div class="column-left">
         <ul>
           <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
-          <li><i class="fa fa-fw fa-phone"></i><a href="tel:+48602840799">+48 602 840 799</a></li>
           <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps/place/Gda%C5%84sk/@54.3475841,18.6372806,14.4z">Gdańsk, Poland</a></li>
         </ul>
       </div>
@@ -231,15 +230,15 @@
         <h1>BIO</h1>
 
         <article>
-          <p>Full-stack Software Engineer with almost 20 years of work experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having 13 years of commercial experience building both small and large-scale web applications in Rails.</p>
+          <p>Full-stack Software Engineer with 20 years of professional experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having 14 years of commercial experience building both small and large-scale web applications.</p>
 
-          <p>Big fan of serverless architectures utilising <strong>AWS Lambda</strong> (node.js; ES6). Experienced with <strong>Vue.js</strong> and <strong>React.js</strong>.</p>
+          <p>Big fan of serverless architectures utilising <strong>AWS Lambda</strong> (Ruby/Node). Proficient in <strong>ReactJS</strong>, and <strong>Vue.js</strong>.</p>
 
           <p>A big advocate of Agile practices in software engineering. Loves getting things done, hates mediocrity. Problem solver fit for most challenging projects in diverse and changing environments both startup and enterprise like.</p>
 
-          <p>In the past taking roles of <strong>Senior Ruby Developer</strong>, <strong>Team/Technical Lead</strong> and <strong>Software Engineering Manager</strong>, having experience with managing both remote and on-site teams.</p>
+          <p>In the past worked as <strong>Team/Technical Lead</strong>, <strong>Senior Ruby/Rails Developer</strong>, and <strong>Software Engineering Manager</strong>, managing both remote and on-site teams.</p>
 
-          <p>Occasionally a speaker at a <a href="http://trug.pl/">local Ruby community</a> meetings in Tri-City, Poland.</p>
+          <p>Occasional speaker at <a href="https://trug.pl/">local Ruby community</a> meetings in Tri-City, Poland.</p>
         </article>
       </section>
 
@@ -252,9 +251,9 @@
             <span>Ruby on Rails</span>
             <span>TDD</span>
             <span>RSpec</span>
-            <span>Javascript (ES6)</span>
+            <span>Javascript</span>
+            <span>ReactJS</span>
             <span>Vue.js</span>
-            <span>React.js</span>
             <span>Ember.js</span>
             <span>PostgreSQL</span>
             <span>MySQL</span>
