--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
     <section class="contact">
       <div class="column-left">
         <ul>
-          <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
-          <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps/place/Gda%C5%84sk/@54.3475841,18.6372806,14.4z">Gdańsk, Poland</a></li>
+          <li><i class="fa fa-fw fa-wordpress"></i><a href="http://pawelgoscicki.com">pawelgoscicki.com</a></li>
+          <li><i class="fa fa-fw fa-linkedin"></i><a href="https://pl.linkedin.com/in/pawelgoscicki">LinkedIn</a></li>
+          <li><i class="fa fa-fw fa-github"></i><a href="https://github.com/pjg">GitHub</a></li>
         </ul>
       </div>
 
       <div class="column-right">
         <ul>
-          <li><i class="fa fa-fw fa-wordpress"></i><a href="http://pawelgoscicki.com">pawelgoscicki.com</a></li>
-          <li><i class="fa fa-fw fa-linkedin"></i><a href="https://pl.linkedin.com/in/pawelgoscicki">LinkedIn</a></li>
-          <li><i class="fa fa-fw fa-github"></i><a href="https://github.com/pjg">GitHub</a></li>
+          <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
+          <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps/place/Gda%C5%84sk/@54.3475841,18.6372806,14.4z">Gdańsk, Poland</a></li>
         </ul>
       </div>
     </section>
@@ -60,12 +60,40 @@
         <article>
           <ul class="education-experience">
             <li>
+              <h2>Freelance Full-stack Engineer</h2>
+              <h3>Freelance</h3>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>1999 - present</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Maintenance and development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a> − <span class="technology">Rails/ReactJS</span> • <span class="period">2018 - present</span></li>
+                <li>Maintenance and development of accounting application <a href="https://pulseapp.com/">PulseApp</a> for <a href="https://simplefocus.com/">Simple Focus</a> − <span class="technology">Rails/JS</span> • <span class="period">2018 - present</span></li>
+                <li>Extending RV (Recreational Vehicles) rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> − <span class="technology">Rails/Vue.js</span> • <span class="period">2018 - 2019</span></li>
+                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) − <span class="technology">Rails</span> • <span class="period">2013 - 2015</span></li>
+                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) − <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
+                <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) − <span class="technology">Rails</span> • <span class="period">2010 - 2013</span></li>
+                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) − <span class="technology">Rails/jQuery</span> • <span class="period">2007 - 2019</span></li>
+                <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) − <span class="technology">Rails</span> • <span class="period">2007 - 2015</span></li>
+                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) − <span class="technology">HTML/JS</span>, later <span class="technology">Rails</span></span> • <span class="period">2002 - present</span></li>
+                <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) − <span class="technology">PHP,</span> later <span class="technology">Rails</span> • <span class="period">2002 - 2015</span></li>
+                <li>Created custom inventory management system for online library − <span class="technology">PHP</span> • <span class="period">1999 - 2000</span></li>
+              </ul>
+            </li>
+
+            <li>
               <h2>Chief Ruby Architect / Software Engineering Manager</h2>
               <h3>Hello Bar</h3>
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>November 2016 - ongoing</span>
+                  <i class="fa fa-calendar"></i> <span>November 2016 - August 2018</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Remote</span>
@@ -91,29 +119,7 @@
             </li>
 
             <li>
-              <h2>Founder / Owner</h2>
-              <h3>Sagraffo</h3>
-
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>January 2010 - ongoing</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland / Remote</span>
-                </p>
-              </div>
-
-              <ul class="experience-details">
-                <li>Founder of a one-man Ruby on Rails web development consultancy</li>
-                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle)</li>
-                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy (Express&nbsp;Kaszubski)</li>
-                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (TopWhite)</li>
-                <li>Built custom CMS system powering the website for a country guesthouse (Kania&nbsp;Lodge)</li>
-              </ul>
-            </li>
-
-            <li>
-              <h2>Lead Rails Developer</h2>
+              <h2>Lead Ruby Developer</h2>
               <h3>AirHelp</h3>
 
               <div class="period-place">
@@ -138,7 +144,7 @@
             </li>
 
             <li>
-              <h2>Lead Rails Developer</h2>
+              <h2>Lead Ruby Developer</h2>
               <h3>Exvo</h3>
 
               <div class="period-place">
@@ -156,26 +162,6 @@
             </li>
 
             <li>
-              <h2>Web / Ruby / Rails Developer</h2>
-              <h3>Freelance</h3>
-
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>January 2002 - December 2009</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland / Remote</span>
-                </p>
-              </div>
-
-              <ul class="experience-details">
-                <li>Built custom CMS and front-end for an online application with postcard wishes (TylkoZyczenia)</li>
-                <li>Built custom CMS for an auto repair station (Żybko)</li>
-                <li>Built custom CMS and stocks management system for an online shop selling wine (Wine Express)</li>
-              </ul>
-            </li>
-
-            <li>
               <h2>PHP Developer</h2>
               <h3>Gdańsk University of Technology, Computer Science Centre</h3>
 
@@ -189,7 +175,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Part of a team responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
+                <li>Responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
               </ul>
             </li>
 
