Fix typo in BIO

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               <ul class="experience-details">
                 <li>Responsible for managing engineering and QA teams</li>
                 <li>Implemented and enforced coding standards</li>
-                <li>Responsible from implementing SCRUM</li>
+                <li>Responsible for implementing SCRUM methodology</li>
                 <li>Introduced styling guide tools to the project (Rubocop, ESLint)</li>
                 <li>Centralised the infrastructure by moving all services to AWS</li>
                 <li>Led an effort to increase code coverage from 50% to 97%</li>
