--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="column-right">
         <ul>
           <li><i class="fa fa-fw fa-envelope-o"></i><span class="email">pawel DOT goscicki AT gmail DOT com</span></li>
-          <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps/place/Gda%C5%84sk/@54.3475841,18.6372806,14.4z">Gdańsk, Poland</a></li>
+          <li><i class="fa fa-fw fa-map-marker"></i><a href="https://www.google.com/maps">Remote (World)</a></li>
         </ul>
       </div>
     </section>
