Tweak html tags and general styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="stripe">
   </div>
 
-  <div class="intro">
+  <article class="intro">
     <h1>PAWEŁ GOŚCICKI</h1>
     <h2>Senior Ruby Architect / Software Engineering Manager</h2>
 
@@ -48,20 +48,20 @@
     </section>
 
     <img class="avatar" src="images/avatar.jpg?version=2" alt="Paweł Gościcki">
-  </div>
+  </article>
 
   <main role="main" class="content">
 
     <div class="column-left">
 
       <section class="experience">
-        <h1>EXPERIENCE</h1>
+        <h3>EXPERIENCE</h3>
 
         <article>
           <ul class="education-experience">
             <li>
-              <h2>Freelance Full-stack Engineer</h2>
-              <h3>Freelance</h3>
+              <h4>Freelance Full-stack Engineer</h4>
+              <h5>Freelance</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -88,8 +88,8 @@
             </li>
 
             <li>
-              <h2>Chief Ruby Architect / Software Engineering Manager</h2>
-              <h3>Hello Bar</h3>
+              <h4>Chief Ruby Architect / Software Engineering Manager</h4>
+              <h5>Hello Bar</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -119,8 +119,8 @@
             </li>
 
             <li>
-              <h2>Lead Ruby Developer</h2>
-              <h3>AirHelp</h3>
+              <h4>Lead Ruby Developer</h4>
+              <h5>AirHelp</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -144,8 +144,8 @@
             </li>
 
             <li>
-              <h2>Lead Ruby Developer</h2>
-              <h3>Exvo</h3>
+              <h4>Lead Ruby Developer</h4>
+              <h5>Exvo</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -162,8 +162,8 @@
             </li>
 
             <li>
-              <h2>PHP Developer</h2>
-              <h3>Gdańsk University of Technology, Computer Science Centre</h3>
+              <h4>PHP Developer</h4>
+              <h5>Gdańsk University of Technology, Computer Science Centre</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -180,8 +180,8 @@
             </li>
 
             <li>
-              <h2>Graphic Designer</h2>
-              <h3>Pomorska Agencja Reklamowa</h3>
+              <h4>Graphic Designer</h4>
+              <h5>Pomorska Agencja Reklamowa</h5>
 
               <div class="period-place">
                 <p class="period">
@@ -205,7 +205,7 @@
     <div class="column-right">
 
       <section class="life-philosophy">
-        <h1>LIFE PHILOSOPHY</h1>
+        <h3>LIFE PHILOSOPHY</h3>
 
         <article>
         <p>“That is done fast enough<br>which is done well enough.”</p>
@@ -213,7 +213,7 @@
       </section>
 
       <section class="bio">
-        <h1>BIO</h1>
+        <h3>BIO</h3>
 
         <article>
           <p>Full-stack Software Engineer with 20 years of professional experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having 14 years of commercial experience building both small and large-scale web applications.</p>
@@ -229,7 +229,7 @@
       </section>
 
       <section class="skills">
-        <h1>SKILLS</h1>
+        <h3>SKILLS</h3>
 
         <article>
           <p class="tags">
@@ -254,7 +254,7 @@
       </section>
 
       <section class="languages">
-        <h1>LANGUAGES</h1>
+        <h3>LANGUAGES</h3>
 
         <article>
           <ul>
@@ -303,19 +303,19 @@
       </section>
 
       <section class="education">
-        <h1>EDUCATION</h1>
+        <h3>EDUCATION</h3>
 
         <article>
           <ul class="education-experience">
             <li>
-              <h2>MSc in Computer Science</h2>
-              <h3>Gdańsk University of Technology</h3>
+              <h4>MSc in Computer Science</h4>
+              <h5>Gdańsk University of Technology</h5>
 
               <p class="period"><i class="fa fa-calendar"></i> <span>September 1997 - June 2002</span></p>
             </li>
             <li>
-              <h2>MSc in Management and Marketing</h2>
-              <h3>Gdańsk University of Technology</h3>
+              <h4>MSc in Management and Marketing</h4>
+              <h5>Gdańsk University of Technology</h5>
 
               <p class="period"><i class="fa fa-calendar"></i> <span>February 2002 - February 2004</span></p>
             </li>
@@ -324,7 +324,7 @@
       </section>
 
       <section class="passions">
-        <h1>PASSIONS</h1>
+        <h3>PASSIONS</h3>
 
         <article>
           <p class="tags">
@@ -335,7 +335,6 @@
             <span>Tennis</span>
             <span>Sci-Fi novels</span>
             <span>Cinematography</span>
-            <span>Photography</span>
           </p>
         </article>
       </section>
