Make experience leaner, update tags

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>1999 - present</span>
+                  <i class="fa fa-calendar"></i> <span>2002 - present</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Remote</span>
@@ -73,17 +73,16 @@
               </div>
 
               <ul class="experience-details">
-                <li>Maintenance and development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a> − <span class="technology">Rails/ReactJS</span> • <span class="period">2018 - present</span></li>
-                <li>Maintenance and development of accounting application <a href="https://pulseapp.com/">PulseApp</a> for <a href="https://simplefocus.com/">Simple Focus</a> − <span class="technology">Rails/JS</span> • <span class="period">2018 - present</span></li>
-                <li>Extending RV (Recreational Vehicles) rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> − <span class="technology">Rails/Vue.js</span> • <span class="period">2018 - 2019</span></li>
-                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) − <span class="technology">Rails</span> • <span class="period">2013 - 2015</span></li>
-                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) − <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
-                <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) − <span class="technology">Rails</span> • <span class="period">2010 - 2013</span></li>
-                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) − <span class="technology">Rails/jQuery</span> • <span class="period">2007 - 2019</span></li>
-                <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) − <span class="technology">Rails</span> • <span class="period">2007 - 2015</span></li>
-                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) − <span class="technology">HTML/JS</span>, later <span class="technology">Rails</span></span> • <span class="period">2002 - present</span></li>
-                <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) − <span class="technology">PHP,</span> later <span class="technology">Rails</span> • <span class="period">2002 - 2015</span></li>
-                <li>Created custom inventory management system for online library − <span class="technology">PHP</span> • <span class="period">1999 - 2000</span></li>
+                <li>Maintenance and development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a> <span class="technology">Ruby on Rails</span> <span class="technology">React</span> • <span class="period">2018 - present</span></li>
+                <li>Maintenance and development of accounting application <a href="https://pulseapp.com/">PulseApp</a> for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> • <span class="period">2018 - 2019</span></li>
+                <li>Extending RV (Recreational Vehicles) rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
+                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2013 - 2015</span></li>
+                <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
+                <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
+                <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2019</span></li>
+                <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2009</span></li>
+                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) <span class="technology">Ruby on Rails</span></span> • <span class="period">2002 - 2019</span></li>
+                <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2015</span></li>
               </ul>
             </li>
 
@@ -96,7 +95,7 @@
                   <i class="fa fa-calendar"></i> <span>November 2016 - August 2018</span>
                 </p>
                 <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                  <i class="fa fa-map-marker"></i> <span>San Diego, CA (Remote)</span>
                 </p>
               </div>
 
@@ -108,13 +107,13 @@
                 <li>Centralised the infrastructure by moving all services to AWS</li>
                 <li>Led an effort to increase code coverage from 50% to 97%</li>
                 <li>Scaled production deployments from once per week to multiple per day</li>
-                <li>Built from scratch and launched first AWS Lambda functions</li>
+                <li>Built and launched first AWS Lambda functions</li>
                 <li>Moved core business logic to AWS Lambda</li>
                 <li>Reduced total infrastructure costs by more than 60%</li>
                 <li>Utilised AWS services like EC2, ELB, Lambda, SNS, SQS, DynamoDB, API Gateway, RDS, ElastiCache, Route 53, CloudFront and CloudWatch</li>
                 <li>Architected Hello Bars's data analytics infrastructure utilising Amplitude and AWS QuickSight</li>
                 <li>Responsible for recruitment process for the engineering team</li>
-                <li>Technologies: Ruby on Rails, Vue.js, Ember.js, Javascript (node.js; ES6)</li>
+                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> <span class="technology">Node</span></li>
               </ul>
             </li>
 
@@ -152,7 +151,7 @@
                   <i class="fa fa-calendar"></i> <span>February 2011 - March 2014</span>
                 </p>
                 <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Remote</span>
+                  <i class="fa fa-map-marker"></i> <span>Hague, NL (Remote)</span>
                 </p>
               </div>
 
@@ -178,24 +177,6 @@
                 <li>Responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
               </ul>
             </li>
-
-            <li>
-              <h4>Graphic Designer</h4>
-              <h5>Pomorska Agencja Reklamowa</h5>
-
-              <div class="period-place">
-                <p class="period">
-                  <i class="fa fa-calendar"></i> <span>July 1998 - November 2001</span>
-                </p>
-                <p class="place">
-                  <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
-                </p>
-              </div>
-
-              <ul class="experience-details">
-                <li>Responsible for preparing graphic designs for color printing on freebies (tracing rasterised logos into vectors) and designing printed ads</li>
-              </ul>
-            </li>
           </ul>
         </article>
       </section>
@@ -216,9 +197,9 @@
         <h3>BIO</h3>
 
         <article>
-          <p>Full-stack Software Engineer with 20 years of professional experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having 14 years of commercial experience building both small and large-scale web applications.</p>
+          <p>Full-stack Software Engineer with over 15 years of professional experience. Passionate about creating high quality, reliable software. A believer in flexible and extensible systems. Specialising in back-end <strong>Ruby on Rails</strong> development, having over 10 years of commercial experience building both small and large-scale web applications.</p>
 
-          <p>Big fan of serverless architectures utilising <strong>AWS Lambda</strong> (Ruby/Node). Proficient in <strong>ReactJS</strong>, and <strong>Vue.js</strong>.</p>
+          <p>Big fan of serverless architectures utilising <strong>AWS Lambda</strong> (Ruby/Node). Proficient in <strong>React</strong>, and <strong>Vue</strong>.</p>
 
           <p>A big advocate of Agile practices in software engineering. Loves getting things done, hates mediocrity. Problem solver fit for most challenging projects in diverse and changing environments both startup and enterprise like.</p>
 
@@ -233,22 +214,17 @@
 
         <article>
           <p class="tags">
-            <span>Ruby</span>
-            <span>Ruby on Rails</span>
-            <span>TDD</span>
-            <span>RSpec</span>
-            <span>Javascript</span>
-            <span>ReactJS</span>
-            <span>Vue.js</span>
-            <span>Ember.js</span>
+            <span>Ruby <i class="fa fa-star"></i></span>
+            <span>Ruby on Rails <i class="fa fa-star"></i></span>
+            <span>React <i class="fa fa-star"></i></span>
+            <span>Vue</span>
+            <span>AWS</span>
+            <span>Lambda functions</span>
+            <span>Git</span>
             <span>PostgreSQL</span>
             <span>MySQL</span>
-            <span>Git</span>
-            <span>HTML5</span>
-            <span>CSS3</span>
-            <span>AWS</span>
-            <span>AWS Lambda</span>
-            <span>Solr</span>
+            <span>TDD</span>
+            <span>RSpec</span>
           </p>
         </article>
       </section>
