Update work experience

--- a/index.html
+++ b/index.html
@@ -60,6 +60,27 @@
         <article>
           <ul class="education-experience">
             <li>
+              <h4>Senior Ruby/React developer</h4>
+              <h5>Workstory Inc.</h5>
+
+              <div class="period-place">
+                <p class="period">
+                  <i class="fa fa-calendar"></i> <span>2018 - present</span>
+                </p>
+                <p class="place">
+                  <i class="fa fa-map-marker"></i> <span>Vancouver, CA (Remote)</span>
+                </p>
+              </div>
+
+              <ul class="experience-details">
+                <li>Development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a></li>
+                <li>Responsible both for the backend (API) and the front-end application (Visual editor)</li>
+                <li>Moved some of the business logic to AWS Lambda</li>
+                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">React</span> <span class="technology">AWS Lambda</span></li>
+              </ul>
+            </li>
+
+            <li>
               <h4>Freelance Full-stack Engineer</h4>
               <h5>Freelance</h5>
 
@@ -73,9 +94,8 @@
               </div>
 
               <ul class="experience-details">
-                <li>Maintenance and development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a> <span class="technology">Ruby on Rails</span> <span class="technology">React</span> • <span class="period">2018 - present</span></li>
-                <li>Maintenance and development of accounting application <a href="https://pulseapp.com/">PulseApp</a> for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> • <span class="period">2018 - 2019</span></li>
-                <li>Extending RV (Recreational Vehicles) rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
+                <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> • <span class="period">2018 - 2019</span></li>
+                <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
                 <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2013 - 2015</span></li>
                 <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
                 <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
@@ -92,7 +112,7 @@
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>November 2016 - August 2018</span>
+                  <i class="fa fa-calendar"></i> <span>2016 - 2018</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>San Diego, CA (Remote)</span>
@@ -123,7 +143,7 @@
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>June 2014 - August 2016</span>
+                  <i class="fa fa-calendar"></i> <span>2014 - 2016</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
@@ -131,7 +151,7 @@
               </div>
 
               <ul class="experience-details">
-                <li>Led a team of Ruby on Rails developers building IT systems of AirHelp</li>
+                <li>Led a team building IT systems of AirHelp</li>
                 <li>Introduced GitHub flow in the development process with pull requests and code reviews</li>
                 <li>Introduced CI process in the development workflow (using TeamCity)</li>
                 <li>Shaped best web development practices across the company</li>
@@ -139,6 +159,7 @@
                 <li>Responsible for shaping the hiring process and hiring new developers</li>
                 <li>Scaled the team from eight to more than thirty developers</li>
                 <li>Leader of major internal projects (claim state machine, claim value model, OTA partners API, etc.)</li>
+                <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">Ruby</span> <span class="technology">Ember</span></li>
               </ul>
             </li>
 
@@ -148,7 +169,7 @@
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>February 2011 - March 2014</span>
+                  <i class="fa fa-calendar"></i> <span>2011 - 2014</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Hague, NL (Remote)</span>
@@ -156,17 +177,18 @@
               </div>
 
               <ul class="experience-details">
-                <li>Led a team of two (at first) and then four Ruby on Rails developers building cloud based operating system bringing your local machine to the web (before the pivot) and a money management platform enabling users to easily send their money to their friends (after the pivot)</li>
+                <li>Led a team of developers building cloud based operating system bringing your local machine to the web and money management platform enabling users to send funds to their friends</li>
+                <li>Technologies: <span class="technology">Ruby on Rails</span></li>
               </ul>
             </li>
 
             <li>
               <h4>PHP Developer</h4>
-              <h5>Gdańsk University of Technology, Computer Science Centre</h5>
+              <h5>Computer Science Centre, Gdańsk University of Technology</h5>
 
               <div class="period-place">
                 <p class="period">
-                  <i class="fa fa-calendar"></i> <span>April 2004 - November 2009</span>
+                  <i class="fa fa-calendar"></i> <span>2004 - 2009</span>
                 </p>
                 <p class="place">
                   <i class="fa fa-map-marker"></i> <span>Gdańsk, Poland</span>
@@ -174,7 +196,8 @@
               </div>
 
               <ul class="experience-details">
-                <li>Responsible for development and maintenance of the Online Recruitment System for candidates who wish to study at Gdańsk University of Technology</li>
+                <li>Responsible for development of the Online Recruitment Platform for candidates willing to study at the Gdańsk University of Technology</li>
+                <li>Technologies: <span class="technology">PHP</span></li>
               </ul>
             </li>
           </ul>
@@ -287,13 +310,13 @@
               <h4>MSc in Computer Science</h4>
               <h5>Gdańsk University of Technology</h5>
 
-              <p class="period"><i class="fa fa-calendar"></i> <span>September 1997 - June 2002</span></p>
+              <p class="period"><i class="fa fa-calendar"></i> <span>Graduated in 2002</span></p>
             </li>
             <li>
               <h4>MSc in Management and Marketing</h4>
               <h5>Gdańsk University of Technology</h5>
 
-              <p class="period"><i class="fa fa-calendar"></i> <span>February 2002 - February 2004</span></p>
+              <p class="period"><i class="fa fa-calendar"></i> <span>Graduated in 2004</span></p>
             </li>
           </ul>
         </article>
