Tweak latest experience/positions

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <article>
           <ul class="education-experience">
             <li>
-              <h4>Senior Ruby/React developer</h4>
+              <h4>Senior Full Stack Engineer</h4>
               <h5>Workstory Inc.</h5>
 
               <div class="period-place">
@@ -73,15 +73,16 @@
               </div>
 
               <ul class="experience-details">
-                <li>Development of online Résumé Builder application <a href="https://www.visualcv.com/">VisualCV</a></li>
-                <li>Responsible both for the backend (API) and the front-end application (Visual editor)</li>
-                <li>Moved some of the business logic to AWS Lambda</li>
+                <li>Development of the online Résumé Builder web application <a href="https://www.visualcv.com/">VisualCV</a></li>
+                <li>Responsible for the development and maintenance of the backend API</li>
+                <li>Responsible for the development and maintenance of the visual CV editor</li>
+                <li>Responsible for the migration of selected business logic to AWS Lambda</li>
                 <li>Technologies: <span class="technology">Ruby on Rails</span> <span class="technology">React</span> <span class="technology">AWS Lambda</span></li>
               </ul>
             </li>
 
             <li>
-              <h4>Freelance Full-stack Engineer</h4>
+              <h4>Freelance Full Stack Engineer</h4>
               <h5>Freelance</h5>
 
               <div class="period-place">
@@ -94,14 +95,14 @@
               </div>
 
               <ul class="experience-details">
-                <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> • <span class="period">2018 - 2019</span></li>
+                <li>Maintenance and development of the <a href="https://pulseapp.com/">PulseApp</a> accounting application for <a href="https://simplefocus.com/">Simple Focus</a> <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2018 - 2019</span></li>
                 <li>Extending Recreational Vehicles rentals and insurance whitelabel platform for <a href="https://www.digisureinc.com/">DigiSure</a> <span class="technology">Ruby on Rails</span> <span class="technology">Vue</span> • <span class="period">2018 - 2019</span></li>
-                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2013 - 2015</span></li>
+                <li>Lead a team building an online marketplace for employers and freelancers (Kumdle Freelance application for <strong>Conjune</strong>) <span class="technology">Ruby on Rails</span> <span class="technology">JS</span> • <span class="period">2013 - 2015</span></li>
                 <li>Built storage management system with automatic stocks and prices synchronisation with warehouse data (<strong>TopWhite</strong>) <span class="technology">Ruby</span> • <span class="period">2011 - 2013</span></li>
                 <li>Created custom CMS for a car repair shop and towing service (<strong>Żybko</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2010 - 2013</span></li>
                 <li>Built custom CMS, ad management system and front-end for an online newspaper in Kartuzy, Poland (<strong>Express&nbsp;Kaszubski</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2019</span></li>
                 <li>Created custom CMS and front-end for an online application with postcard wishes (<strong>TylkoZyczenia</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2007 - 2009</span></li>
-                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) <span class="technology">Ruby on Rails</span></span> • <span class="period">2002 - 2019</span></li>
+                <li>Built custom CMS system powering the website for a country guesthouse (<strong>Kania&nbsp;Lodge</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2019</span></li>
                 <li>Created custom CMS and inventory management system for an online shop selling wine (<strong>Wine Express</strong>) <span class="technology">Ruby on Rails</span> • <span class="period">2002 - 2015</span></li>
               </ul>
             </li>
